[gd_scene load_steps=5 format=3 uid="uid://cxagi5acbvhrk"]

[ext_resource type="Script" path="res://HUD.gd" id="1_a1lc6"]

[sub_resource type="FontFile" id="FontFile_rr71n"]
cache/0/62/0/ascent = 0.0
cache/0/62/0/descent = 0.0
cache/0/62/0/underline_position = 0.0
cache/0/62/0/underline_thickness = 0.0
cache/0/62/0/scale = 1.0
cache/0/62/0/kerning_overrides/62/0 = Vector2(0, 0)
cache/0/62/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/62/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontVariation" id="FontVariation_nb6q3"]

[sub_resource type="FontVariation" id="FontVariation_73rhe"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_a1lc6")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_top = 50.0
offset_right = 40.5
offset_bottom = 136.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_type_variation = &"GraphNodeTitleLabel"
theme_override_fonts/font = SubResource("FontFile_rr71n")
theme_override_font_sizes/font_size = 62
text = "0"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -108.0
offset_right = 175.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_nb6q3")
theme_override_font_sizes/font_size = 40
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -172.0
offset_right = 80.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_73rhe")
theme_override_font_sizes/font_size = 30
text = "Start"
metadata/_edit_lock_ = true

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
